[package]
name = "seminar-rust-implementation"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcoin = { version = "0.32", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
rand = "0.9.1"
rusqlite = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
